# nexa-analyzer-api

./: .env.example  .gitignore  AGENTIC_PIPELINE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/routes/: context.py  health.py
app/core/: config.py
app/models/: context.py
app/services/: context_analyzer_service.py
app/services/agentic/: coordinator_agent.py  extractor_agent.py  ingestor_agent.py  researcher_agent.py  validator_agent.py
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: main.tsx
frontend/src/components/: AnalysisResult.tsx  FileUpload.tsx
frontend/src/pages/: App.tsx
frontend/src/types/: context.ts
samples/: brief.txt
tests/: test_context.py
